# anycar-pro-stm32-hal

./: .clang-format  .clangd  .gitignore  .gitmodules  .mxproject  Anycar Pro.ioc  CMakeLists.txt  Makefile
Application/Inc/: anycar_pro.h  callbacks.h  communication.h  connection.h  motion_control.h  status_report.h  tasks.h
Application/Inc/Modules/: encoder.h  motor.h  pid.h
Application/Src/: app.c  callbacks.c  communication.c  connection.c  motion_control.c  status_report.c  tasks.c
Application/Src/Modules/: encoder.c  motor.c  pid.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Core/Src/: dma.c  freertos.c  main.c  spi.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  tim.c  usart.c
